[gd_scene load_steps=17 format=2]

[ext_resource path="res://levels/Main.gd" type="Script" id=1]
[ext_resource path="res://ui/CustomPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://snake/Snake.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/GameOverPopup.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 407, 198 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.64805, 0.78, 0.507, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.38, 0, 0.59, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 2
shadow_offset = Vector2( 4, 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.388235, 0.52549, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.580392, 0, 0.721569, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0, 0, 0.513726 )
shadow_size = 1
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFontData" id=8]
hinting = 0
font_path = "res://fonts/LuckiestGuy-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 18
outline_color = Color( 0.0941176, 0.415686, 0.129412, 1 )
use_filter = true
extra_spacing_top = 5
font_data = SubResource( 8 )

[sub_resource type="Theme" id=10]
resource_local_to_scene = true
default_font = SubResource( 9 )
Button/colors/font_color = Color( 0.709804, 1, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.709804, 1, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = null
Label/colors/font_color = Color( 0.952941, 0.0941176, 0.0941176, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = SubResource( 5 )
PopupDialog/styles/panel = SubResource( 6 )
WindowDialog/colors/title_color = Color( 0.603922, 0.937255, 0.686275, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 7 )

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Walls" type="Area2D" parent="."]

[node name="WallTop" type="CollisionShape2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 512, 116 )
shape = SubResource( 1 )

[node name="WallBottom" type="CollisionShape2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 512, 559 )
shape = SubResource( 1 )

[node name="WallLeft" type="CollisionShape2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 79, 340 )
shape = SubResource( 2 )

[node name="WallRight" type="CollisionShape2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 946, 340 )
shape = SubResource( 2 )

[node name="Snake" parent="." instance=ExtResource( 3 )]
pause_mode = 1
position = Vector2( 492, 349 )

[node name="Food" type="Node2D" parent="."]

[node name="Obstacles" type="Node2D" parent="."]

[node name="Pickups" type="Node2D" parent="."]

[node name="LevelTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 45.0
one_shot = true
autostart = true

[node name="PickupSpawnTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 10.0
autostart = true

[node name="SpawnArea" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 0

[node name="SpawnRectangle" type="CollisionShape2D" parent="SpawnArea"]
position = Vector2( 512, 336 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="QuitPopup" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.5
margin_top = -55.5
margin_right = 101.5
margin_bottom = 55.5
theme = SubResource( 10 )

[node name="GameOver" parent="." instance=ExtResource( 6 )]
[connection signal="area_entered" from="Walls" to="." method="_on_Walls_area_entered"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="PickupSpawnTimer" to="." method="_on_PickupSpawnTimer_timeout"]
